crates/swc/tests/tsc-references/internalModules/moduleDeclarations/invalidNestedModules/input.ts/es2015.1.normal/output.js
var A;
(function(A1) {
    let B1;
    (function(B) {
        let C1;
        (function(C) {
            class Point {
            }
            C.Point = Point;
        })(C1 || (C1 = {
        }));
        B.C = C1;
    })(B1 || (B1 = {
    }));
    A1.B = B1;
})(A || (A = {
}));
(function(A2) {
    let B2;
    (function(B) {
        class C {
        }
        B.C = C;
    })(B2 || (B2 = {
    }));
    A2.B = B2;
})(A || (A = {
}));
var M2;
(function(M21) {
    let X1;
    (function(X) {
        class Point {
        }
        X.Point = Point;
    })(X1 || (X1 = {
    }));
    M21.X = X1;
})(M2 || (M2 = {
}));
(function(M22) {
    let X2;
    (function(X) {
        var Point;
        X.Point = Point;
    })(X2 || (X2 = {
    }));
    M22.X = X2;
})(M2 || (M2 = {
}));
